# Juxta5-nRF

./: .gitignore  CMakeLists.txt  FRAM_TESTING_SUMMARY.md  Juxta5.code-workspace  Kconfig  README.md  project-structure.mdc
.cursor/rules/: ble-implementation.mdc  build-practices.mdc  project-structure.mdc  vitals-memory.mdc
applications/juxta-axy/: CMakeLists.txt  README.md  VERSION  build_axy.sh  prj.conf  sample.yaml
applications/juxta-axy/src/: juxta_axy_example.c  lis2dh12_zephyr.c  lis2dh12_zephyr.h  main.c
applications/juxta-ble/: .gitignore  CMakeLists.txt  DFU.md  HUBLINK.md  Kconfig  README.md  SMP.md  VERSION  build_ble.sh  generate_signing_key.sh  prj.conf  prj_mcuboot_backup.conf  prj_standalone.conf  sample.yaml  spec_ADC.md  spec_ADC_debug.md  spec_DFU.md  spec_HUBLINK.md  spec_Social.md  spec_sheet.md  sysbuild.conf  sysbuild.conf.disabled
applications/juxta-ble-observer-min/: CMakeLists.txt  Kconfig  prj.conf
applications/juxta-ble-observer-min/src/: main.c
applications/juxta-ble-suite/: CMakeLists.txt  Kconfig  README.md  prj.conf
applications/juxta-ble-suite/boards/: nrf52820dongle_nrf52820.overlay
applications/juxta-ble-suite/src/: accelerometer.c  accelerometer.h  ble_integration.c  ble_integration.h  fram_integration.c  fram_integration.h  magnet_sensor.c  magnet_sensor.h  main.c
applications/juxta-ble/boards/: Juxta5-1_ADC.overlay  Juxta5-4_nRF52840.overlay
applications/juxta-ble/child_image/: mcuboot.conf  mcuboot.overlay
applications/juxta-ble/child_image/boards/: Juxta5-6_nRF52840_defconfig
applications/juxta-ble/child_image/mcuboot/: prj.conf
applications/juxta-ble/src/: adc.c  adc.h  ble_service.c  ble_service.h  lis2dh12.c  lis2dh12.h  lis2dh12_zephyr.c  lis2dh12_zephyr.h  main.c
applications/juxta-file-system/: CMakeLists.txt  GETTING_STARTED.md  Kconfig  README.md  build.sh  prj.conf  sample.yaml
applications/juxta-file-system/boards/: Juxta5-1_ADC.overlay
applications/juxta-file-system/src/: fram_test.c  framfs_test.c  framfs_time_test.c  main.c  vitals_test.c
applications/juxta-file-system/sysbuild/: CMakeLists.txt
applications/juxta-mvp/: CMakeLists.txt  TESTING.md  build_adc.sh  prj.conf  prj_with_fram_lib.conf  sample.yaml  subfolder_list_fixed.py  test_build.conf
applications/juxta-mvp/boards/: Juxta5-1_ADC.overlay
applications/juxta-mvp/src/: fram_led_example.c  fram_library_example.c  juxta5_example.c  main.c  simple_main.c
applications/p0_05_test/: CMakeLists.txt  README.md  prj.conf
applications/p0_05_test/src/: main.c
boards/NeurotechHub/Juxta5-1_ADC/: Juxta5-1_ADC.dts  Juxta5-1_ADC.yml  Juxta5-1_ADC_defconfig  Kconfig.Juxta5-1_ADC  README.md  board.yml
boards/NeurotechHub/Juxta5-1_AXY/: Juxta5-1_AXY-pinctrl.dtsi  Juxta5-1_AXY.dts  Juxta5-1_AXY.yml  Juxta5-1_AXY_defconfig  Kconfig.Juxta5-1_AXY  README.md  board.cmake  board.yml
boards/NeurotechHub/Juxta5-4_nRF52840/: Juxta5-4_nRF52840.dts  Juxta5-4_nRF52840.yml  Juxta5-4_nRF52840_defconfig  Kconfig.Juxta5-4_nRF52840  README.md  board.yml  pre_dt_board.cmake
boards/NeurotechHub/Juxta5-6_nRF52840/: Juxta5-6_nRF52840-pinctrl.dtsi  Juxta5-6_nRF52840.dts  Juxta5-6_nRF52840.yml  Juxta5-6_nRF52840_defconfig  Kconfig.Juxta5-6_nRF52840  README.md  board.cmake  board.yml
lib/: CMakeLists.txt  Kconfig  module.yml
lib/juxta_fram/: CMakeLists.txt  Kconfig  MIGRATION.md  README.md
lib/juxta_fram/include/juxta_fram/: fram.h
lib/juxta_fram/src/: fram.c
lib/juxta_framfs/: CMakeLists.txt  Kconfig  README.md
lib/juxta_framfs/include/juxta_framfs/: framfs.h
lib/juxta_framfs/src/: framfs.c
lib/juxta_vitals_nrf52/: CMakeLists.txt  Kconfig  README.md  RTCsetup.md
lib/juxta_vitals_nrf52/include/juxta_vitals_nrf52/: vitals.h
lib/juxta_vitals_nrf52/src/: vitals.c
